--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "@mdx-js/loader": "^1.5.1",
     "@mdx-js/react": "^3.0.1",
     "@next/mdx": "^9.1.1",
-    "@react-pdf/renderer": "3.3.5",
+    "@react-pdf/renderer": "^3.4.4",
     "@uiw/codemirror-extensions-langs": "^4.23.0",
     "@uiw/codemirror-theme-gruvbox-dark": "^4.23.0",
     "@uiw/react-codemirror": "^4.23.0",
